--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,9 @@
     <string name="action_settings">Settings</string>
     <string name="lb_no_value">n.a.</string>
 
+    <string name="lb_void">-</string>
+    <string name="lb_kg">kg</string>
+    <string name="lb_cm">cm</string>
 
     <!-- AVATAR-FRAGMENT -->
     <string name="lb_avatarBodyHeight">Körpergröße</string>
@@ -18,6 +21,9 @@
     <string name="lb_avatarResultBodyHeight"></string>
     <string name="lb_avatarResultBodyWeight"></string>
     <string name="lb_avatarResultBodyAge"></string>
+
+
+    <string name="lb_currentStatusListIndex"></string>
 
 
     <string name="btn_addNewState">Add new State</string>
